--- a/databasecrud/pom.xml
+++ b/databasecrud/pom.xml
@@ -9,32 +9,33 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <!-- 1. Padronizamos a versão do Java para '21' (Prática do Spring Boot) -->
         <java.version>21</java.version>
     </properties>
 
     <dependencies>
 
-        <!-- 2. Conector MySQL para JDBC -->
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <version>8.0.33</version>
-            <!-- A tag <scope> precisa estar dentro da dependência. -->
             <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
         </dependency>
 
     </dependencies>
 
     <build>
         <plugins>
-            <!-- 3. Plugin do Compilador para fixar o aviso de 'Convert to release' -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <!-- Usamos a propriedade <release> referenciando a <java.version> -->
                     <release>${java.version}</release>
                 </configuration>
             </plugin>
