--- a/web/Spring Boot/my-first-springboot/src/main/resources/application.properties
+++ b/web/Spring Boot/my-first-springboot/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=my-first-springboot
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
