pages for login and register created

--- a/toDoApp/src/main/resources/application.properties
+++ b/toDoApp/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=toDoApp
+# Server
+server.port=8080
+
+# Datasource (Postgres)
+spring.datasource.url=jdbc:postgresql://localhost:5432/todoapp
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# JWT (secret base64) - troque por um segredo forte em produção
+jwt.secret=Zm9vYmFyX3NlY3JldF9leGFtcGxlX2p3dF9zZWNyZXQ=
+jwt.expiration-ms=3600000   # 1h
