creating front-end

--- a/toDoApp/src/main/resources/application.properties
+++ b/toDoApp/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # JWT (secret base64) - troque por um segredo forte em produção
-jwt.secret=Zm9vYmFyX3NlY3JldF9leGFtcGxlX2p3dF9zZWNyZXQ=
-jwt.expiration-ms=3600000   # 1h
+# jwt.secret=Zm9vYmFyX3NlY3JldF9leGFtcGxlX2p3dF9zZWNyZXQ=
+# jwt.expiration-ms=3600000   # 1h
